compiler/actonc/test/syntaxerrors/err1.golden
Building file test/syntaxerrors/err1.act using temporary scratch directory

ERROR: Error when compiling err1 module: Syntax error

test/syntaxerrors/err1.act:1:11:
  |
1 | def f(x): if x>pass:
  |           ^^^^^^^^^^^
unexpected "if x>pass:<newline>   "
expecting end of line or simple statement

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

